hphp/test/zend/good/Zend/tests/arg_unpack/positional_arg_after_unpack_error.php.expectf

Fatal error: The splat operator `...` for unpacking variadic arguments may not appear before other positional arguments. in %s/positional_arg_after_unpack_error.php on line 3
